--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@babel/preset-env": "^7.18.10",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.0",
