--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack",
     "dev": "webpack serve",
     "clean": "rm -rf dist"
   },
@@ -25,6 +25,7 @@
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.1",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.8",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
